# siwick-website

./: .gitattributes  .gitignore  LICENSE  README.md  build_css.bat  deploy.py  requirements.txt  siwick-website.cabal  stack.yaml
.github/workflows/: render-site.yml
compiler/: BulmaFilter.hs  Main.hs  Template.hs
css/: siwick-style.css  siwick-style.css.map
people/: brad.md
people/alumni/: ali.md  andrew.md  jan.md  kunal.md  laurent.md  margaretha.md  mark.md  marty.md  robert.md  vance.md
people/students/: ali.md  david.md  jan.md  joey.md  lauren.md  laurent.md  laurenz.md  malik.md  margaretha.md  marty.md  sebastian.md  sydney.md  tristan.md  vanessa.md
sass/: siwick-style.scss
static/: about-this-website.md  hardware.md  index.html  publications.md  research.md  software.md
templates/: alumni.html  default-internal.html  default.html  profile.html  profiles.html  sitemap.xml
