name:                siwick-website
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            http://www.physics.mcgill.ca/siwicklab
license:             BSD3
license-file:        LICENSE
author:              Laurent P. René de Cotret
maintainer:          laurent.renedecotret@mail.mcgill.ca
copyright:           Laurent P. René de Cotret
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable siwick-website
  hs-source-dirs:      compiler
  main-is:             Main.hs
  other-modules:       Template, 
                       BulmaFilter
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
  build-depends:       base >= 4.15 && < 5,
                       blaze-html,
                       blaze-markup,
                       bytestring,
                       filepath,
                       hakyll,
                       hakyll-images,
                       pandoc >=2.8,
                       pandoc-types,
                       text
